Updates to reflect new creds as well as upgrade the npm version

--- a/serverless.yml
+++ b/serverless.yml
@@ -10,9 +10,9 @@ plugins:
 
 provider:
   name: aws
-  runtime: nodejs6.10
+  runtime: nodejs8.10
   region: us-east-1
-  profile: personal
+  profile: serverless
   timeout: 300
   memorySize: 512
   stage: prod
